Remove commented out code and bug fixes.

--- a/less/layout.less
+++ b/less/layout.less
@@ -37,30 +37,8 @@ body {
 }
 
 .score {
-	position: fixed;
-	top: 6rem;
-	right: 6rem;
-	min-width: 6rem;
-	height: 6rem;
-	font-size: 4rem;
-	background-color: #fff;
-	padding: 1.5rem;
-	color: #404040;
-	text-shadow: none;
-	box-shadow: 0 3px 8px rgba(0, 0, 0, .3);
-	
-	&::after {
-		content: 'My Score';
-		color: #fff;
-		position: absolute;
-		text-shadow: 0 1px 3px rgba(0, 0, 0, .7);
-		bottom: -6rem;
-		min-width: 10rem;
-		white-space: nowrap;
-		left: 50%;
-		-webkit-transform: translateX(-50%);
-		        transform: translateX(-50%);
-	}
+    font-size: 4.8rem;
+    margin-bottom: 4.8rem;
 }
 
 .section {
@@ -174,7 +152,7 @@ body {
 }
 
 .userInput--dummy {
-	visibility: hidden;
+	opacity: .4;
 }
 
 .line {
