Change button restart color

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -46,8 +46,8 @@
 
 .btn--restart {
 	border-radius: 50%;
-	color: #404040;
-	background-color: #efee18;
+	color: #fff;
+	background-color: #194dce;
 	border: 0;
 	position: fixed;
 	width: 6rem;
